# mnemara

./: .gitignore  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  release.yml
evals/: README.md  format_report.py  prompts.yaml  run_eval.py
evals/results/: 20260506T115607Z.json
examples/: programmatic_use.py
examples/roles/: coder.md  gemma-coder.md  gemma-planner.md  gemma-sentinel.md  researcher.md  sentinel.md
examples/roles/pitch/: mnemara.md
examples/roles/story/: lore-checker.md  pipeline.md  researcher.md  writer.md
notes/: blog-devto-runtime-harness.md  devto_post_0_5_0.md  devto_post_v1.md  devto_post_v2_validation.md  gemma_contest_build.md  gemma_contest_entry.md  gh_discussions_reply.md  hn_response_bank.md  hn_show_post.md  screencast_script.md  validation_followups.md
scripts/: devto_publish.py
src/mnemara/: __init__.py  agent.py  cli.py  config.py  gemma_agent.py  graph.py  inbox.py  logging_util.py  mcp.py  paths.py  permissions.py  rag.py  repl.py  replay.py  role.py  runtime_sentinel.py  skeleton.py  store.py  tools.py  tui.py  wiki.py
tests/: test_evals.py  test_file_stat_manifest.py  test_gemma_tool_dispatch.py  test_graph_and_replay.py  test_list_window.py  test_multi_backend.py  test_paths_security.py  test_peer_poll.py  test_read_skeleton.py  test_role_from_url.py  test_runtime_sentinel.py  test_smoke.py  test_v080_stamp_and_compress.py
